<resources>
    <string name="app_name">Amazing App Nasa</string>
    <string name="search_wiki">Найти в Википедии</string>
    <string name="wiki_helper_text">Поищите термин в википедии</string>
    <string name="description">Description</string>
    <string name="favorite">Favorite</string>
    <string name="setting">Setting</string>
    <string name="screen_one">Screen one</string>
    <string name="screen_two">Screen two</string>
    <string name="search">Search</string>
    <string name="theme_app">Theme app</string>
    <string name="nasa">Nasa</string>
    <string name="mars">Mars</string>
    <string name="moon">Moon</string>
    <string name="save">Save</string>
    <string name="image">Image</string>
    <string name="earth">Earth</string>
    <string name="title_text">Title text</string>
    <string name="message_text">Message text</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="_2_day_ago">2 day ago</string>
    <string name="planet_earth">Planet: Earth</string>
    <string name="planet_mars">Planet: Mars</string>
    <string name="satellite_moon">Satellite: Moon</string>
    <string name="choice_of_theme">Choice of theme</string>
    <string name="choice_of_theme_summary">Choice the theme that suits you</string>
    <string name="KEY_THEME" formatted="false">KEY_THEME</string>
    <string name="message_in_toolbar_for_mars">Photos of NASA Curiosity rover, capabilities and the Spirit rovers on Mars</string>
    <string name="message_in_toolbar_for_earth">This image was taken by NASA EPIC camera onboard the NOAA DSCOVR spacecraft</string>
    <string name="message_in_toolbar_for_moon">Photos of the moon taken by NASA</string>
    <string name="notes">Notes</string>
    <string name="title">Title</string>
    <string name="text_field">Text field</string>
    <string name="save_notes">Save notes</string>
    <string name="message">Message</string>
    <string name="list_notes">List notes</string>

    <string-array name="pref_entry_theme">
        <item>Theme Nasa</item>
        <item>Theme Mars</item>
        <item>Theme Moon</item>
    </string-array>

    <string-array name="pref_result_theme">
        <item>NASA</item>
        <item>MARS</item>
        <item>MOON</item>
    </string-array>
</resources>