<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:layout_height="match_parent"
    android:focusable="true">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_notes"
        style="@style/style_toolBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/notes" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="@dimen/margin_middle"
        android:layout_marginEnd="60dp"
        android:hint="@string/title"
        app:endIconMode="clear_text"
        app:boxBackgroundColor="@color/color_light_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_notes">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_name_notes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/text_field" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_message"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_middle"
        android:hint="@string/message"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_marginEnd="@dimen/margin_small"
        app:endIconMode="clear_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_input_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_message_notes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/text_field" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_save_notes"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="@dimen/margin_middle"
        android:layout_marginEnd="60dp"
        android:text="@string/save_notes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_input_message" />

</androidx.constraintlayout.widget.ConstraintLayout>