<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color_layout_main"
    tools:context=".ui.fragment.PicturesOfTheDayFragment">

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/motion_layout_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutDescription="@xml/motion_scene"
        android:layout_margin="10dp">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/table_layout_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background_color_layout_main"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/table_item_today"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/today" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/table_item_yesterday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yesterday" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/table_item_tomorrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_2_day_ago" />

        </com.google.android.material.tabs.TabLayout>

        <include layout="@layout/view_show_image_web_view"
            android:layout_width="match_parent"
            android:id="@+id/layout_load_image"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/table_layout_main"
            />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/search_motion_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/ic_black_search_32"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_load_image"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/search_wiki"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            app:endIconCheckable="true"
            app:endIconDrawable="@drawable/ic_wikipedia"
            app:endIconMode="custom"
            app:helperText="@string/wiki_helper_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_load_image">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.motion.widget.MotionLayout>

    <include layout="@layout/bottom_sheet_layout" />

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottom_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"

        app:fabAlignmentMode="center"
        app:hideOnScroll="true"
        app:layout_scrollFlags="scroll|enterAlways"
        app:navigationIcon="@drawable/ic_hamburger_menu_bottom_bar" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:backgroundTint="?attr/backgroundFloatingActionButton"
        app:layout_anchor="@id/bottom_app_bar"
        app:srcCompat="@drawable/ic_plus_fab"
        app:tint="@color/white" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>